--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <h1>Ankara</h1>
 
       <div class="row">
-        <div class="col-6">
+        <div class="col-5">
           <ul>
             <li class="dayHour">Monday, 22:04</li>
             <li class="weatherDescription">Cloudy</li>
@@ -58,9 +58,16 @@
             </li>
           </ul>
         </div>
-        <div class="col-6">
-          <div class="d-flex flex-row">
-            <div class="p-2"><span class="emoji">🌥</span></div>
+        <div class="col-7">
+          <div class="d-flex justify-content-end">
+            <div class="p-2">
+              <span class="emoji"
+                ><img
+                  src="https://ssl.gstatic.com/onebox/weather/64/sunny.png"
+                  alt="Clear"
+                  id="icon"
+              /></span>
+            </div>
             <div class="p-2"><span class="changeDegree">24</span></div>
             <div class="p-2">
               <a href="#" id="celcius">°C </a><span class="slash">| </span
