--- a/index.html
+++ b/index.html
@@ -80,6 +80,22 @@
       </div>
 
       <br />
+      <div class="weather-forecast">
+        <div class="row">
+          <div class="col-2">
+            <div class="weather-forecast-date">Tue</div>
+            <img
+              src="http://openweathermap.org/img/wn/04d@2x.png"
+              alt="Cloudy"
+              width="42px"
+            />
+            <br />
+            <span class="forecast-max">18°</span>
+            <span class="forecast-min">10°</span>
+          </div>
+        </div>
+      </div>
+      <br />
 
       <div class="row row-cols-1 row-cols-md-5 g-4">
         <div class="col">
