--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       </div>
 
       <br />
-      <div class="weather-forecast">
+      <div class="weather-forecast" id="forecast">
         <div class="row">
           <div class="col-2">
             <div class="weather-forecast-date">Tue</div>
