--- a/index.html
+++ b/index.html
@@ -80,66 +80,9 @@
       </div>
 
       <br />
-      <div class="weather-forecast" id="forecast">
-        <div class="row">
-          <div class="col-2">
-            <div class="weather-forecast-date">Tue</div>
-            <img
-              src="http://openweathermap.org/img/wn/04d@2x.png"
-              alt="Cloudy"
-              width="42px"
-            />
-            <br />
-            <span class="forecast-max">18°</span>
-            <span class="forecast-min">10°</span>
-          </div>
-        </div>
-      </div>
+      <div class="weather-forecast" id="forecast"></div>
       <br />
 
-      <div class="row row-cols-1 row-cols-md-5 g-4">
-        <div class="col">
-          <div class="card text-center h-100" style="max-width: 6rem">
-            <div class="card-body">
-              <h6 class="card-title">Tue</h6>
-              <p class="card-text">🌤 <br />12-26°C</p>
-            </div>
-          </div>
-        </div>
-
-        <div class="col">
-          <div class="card text-center h-100" style="max-width: 6rem">
-            <div class="card-body">
-              <h6 class="card-title">Wed</h6>
-              <p class="card-text">🌤 <br />11-23°C</p>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card text-center h-100" style="max-width: 6rem">
-            <div class="card-body">
-              <h6 class="card-title">Thu</h6>
-              <p class="card-text">🌧<br />11-21°C</p>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card text-center h-100" style="max-width: 6rem">
-            <div class="card-body">
-              <h6 class="card-title">Fri</h6>
-              <p class="card-text">☀️ <br />15-27°C</p>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card text-center h-100" style="max-width: 6rem">
-            <div class="card-body">
-              <h6 class="card-title">Sat</h6>
-              <p class="card-text">☀️ <br />13-29°C</p>
-            </div>
-          </div>
-        </div>
-      </div>
       <br />
       <small>
         <a
