--- a/index.html
+++ b/index.html
@@ -20,11 +20,15 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat&family=Poppins&family=Roboto:wght@300&display=swap"
       rel="stylesheet"
     />
+    <script
+      src="https://kit.fontawesome.com/ddac49f148.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="source/style.css" />
   </head>
 
   <body>
-    <div class="container">
+    <div class="container mt-5">
       <div class="row">
         <div class="col-10">
           <form action="">
@@ -45,23 +49,28 @@
           </form>
         </div>
         <div class="col-2">
-          <button>Current</button>
+          <button><i class="fa-solid fa-location-dot"></i> Current</button>
         </div>
       </div>
 
       <h1>Ankara</h1>
 
       <div class="row">
-        <div class="col-5">
+        <div class="col-5 pt-3">
           <ul>
             <li class="dayHour">Monday, 22:04</li>
             <li class="weatherDescription">Cloudy</li>
-            <li>Humidity: <span id="humidity"></span>%</li>
-            <li>Wind: <span id="wind"></span> m/h</li>
+            <li>
+              <i class="fa-solid fa-droplet"></i> Humidity:
+              <span id="humidity"></span>%
+            </li>
+            <li>
+              <i class="fa-solid fa-wind"></i> Wind: <span id="wind"></span> m/h
+            </li>
           </ul>
         </div>
         <div class="col-7">
-          <div class="d-flex justify-content-end">
+          <div class="d-flex justify-content-end rightSide">
             <div class="p-2">
               <span class="emoji"
                 ><img
@@ -88,6 +97,7 @@
         <a
           href="https://github.com/teytap/Mehtap_Tataroglu_Weather"
           target="_blank"
+          class="sourceLink"
           >Open-source code</a
         >
         by Mehtap Tataroğlu
