--- a/index.html
+++ b/index.html
@@ -37,19 +37,19 @@
                 <input
                   type="text"
                   id="newCity"
-                  placeholder="Type a city.."
+                  placeholder="Bir şehir yazın.."
                   autofocus="on"
                   class="form-control"
                 />
               </div>
               <div class="col-2">
-                <input type="submit" id="citySearch" value="Search" />
+                <input type="submit" id="citySearch" value="Ara" />
               </div>
             </div>
           </form>
         </div>
         <div class="col-2">
-          <button><i class="fa-solid fa-location-dot"></i> Current</button>
+          <button><i class="fa-solid fa-location-dot"></i> Konum</button>
         </div>
       </div>
 
@@ -58,14 +58,15 @@
       <div class="row">
         <div class="col-5 pt-3">
           <ul>
-            <li class="dayHour">Monday, 22:04</li>
-            <li class="weatherDescription">Cloudy</li>
+            <li class="dayHour">Pazartesi, 22:04</li>
+            <li class="weatherDescription">Bulutlu</li>
             <li>
-              <i class="fa-solid fa-droplet"></i> Humidity:
+              <i class="fa-solid fa-droplet"></i> Nem:
               <span id="humidity"></span>%
             </li>
             <li>
-              <i class="fa-solid fa-wind"></i> Wind: <span id="wind"></span> m/h
+              <i class="fa-solid fa-wind"></i> Rüzgar:
+              <span id="wind"></span> km/h
             </li>
           </ul>
         </div>
@@ -100,7 +101,7 @@
           class="sourceLink"
           >Open-source code</a
         >
-        by Mehtap Tataroğlu
+        - Mehtap Tataroğlu
       </small>
     </div>
     <script src="source/index.js"></script>
