fixed language problems and changed some css

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 
   <body>
     <div class="container mt-5">
+      <div class="dayHour text-end mb-3 pe-3">Pazartesi, 22:04</div>
       <div class="row">
         <div class="col-10">
           <form action="">
@@ -58,7 +59,6 @@
       <div class="row">
         <div class="col-5 pt-3">
           <ul>
-            <li class="dayHour">Pazartesi, 22:04</li>
             <li class="weatherDescription">Bulutlu</li>
             <li>
               <i class="fa-solid fa-droplet"></i> Nem:
